--- a/src/styles/Current.css
+++ b/src/styles/Current.css
@@ -5,9 +5,8 @@
   border: 1px solid rgba(255, 255, 255, 0.2);
   border-radius: 15px;
   padding: 20px;
-  height: 210px;
-  width: 700px;
-  max-width: 900px;
+  width: 100%;
+  max-width: 700px;
   margin: 40px auto;
   color: #fff;
 }
