--- a/src/index.css
+++ b/src/index.css
@@ -22,12 +22,16 @@ a:hover {
   color: #535bf2;
 }
 
+* {
+  box-sizing: border-box;
+}
+
 body {
-  margin: 0;
-  display: flex;
-  place-items: center;
-  min-width: 320px;
-  min-height: 100vh;
+  margin: 10;
+  padding: 0 16px; /* Gives breathing room on mobile */
+  background-color: #000;
+  color: #fff;
+  font-family: system-ui, sans-serif;
 }
 
 h1 {
