--- a/src/styles/Hero.css
+++ b/src/styles/Hero.css
@@ -1,5 +1,7 @@
 .hero-container {
+  position: relative;
   display: flex;
+  flex-direction: row;
   align-items: center;
   justify-content: space-between;
   background-color: #000;
@@ -10,6 +12,32 @@
   max-width: 700px;
   margin: 40px auto;
   color: #fff;
+  box-sizing: border-box;
+}
+
+
+.hero-links-vertical {
+  display: flex;
+  flex-direction: column;
+  gap: 8px;
+  position: absolute;
+  right: 20px;
+  top: 10px;
+}
+
+@media (max-width: 600px) {
+  .hero-links-vertical {
+    position: static;
+    flex-direction: row; 
+    justify-content: center;
+    margin-top: 0px;
+  }
+
+  .hero-container {
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+  }
 }
 
 .hero-image {
